A column MALADIE has been stripped of extra space

--- a/Survepi.ipynb
+++ b/Survepi.ipynb
@@ -10,20 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "data2 = pd.read_csv(\"HLOIDS.csv\")\n",
+    "#data2 = pd.read_csv(\"HLOIDS.csv\")\n",
     "data1 = pd.read_csv(\"HLOIDS38.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "ATTAQ          263.2     996.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,12 +335,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need just few columns to proceed our analysis, most of columns are same variable splitted in different age group, so our focus will be on the total number of cases and some other columns related to geographic information"
+    "We need just few columns to proceed our analysis, most of columns are same variable splitted in differents age group, so our focus will be on the total number of cases and some other columns related to geographic information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "(3916, 7)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,13 +381,12 @@
    "source": [
     "selection = ['ZS','NUMSEM','MALADIE','TOTALCAS', 'TOTALDECES', 'LETAL', 'ATTAQ']\n",
     "data1 = data1[selection]\n",
-    "data2 = data2[selection]\n",
     "data1.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +498,7 @@
        "max      38.000000  2561.000000    69.000000   100.000000   996.000000"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,20 +519,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['DECES MATERNELS', 'FIEVRE TYPHOIDE', 'IRA            ',\n",
-       "       'PALUDISME SUSP ', 'PALUDISME CONF ', 'ROUGEOLE       ',\n",
-       "       'PNEUMONIE      ', 'CHOLERA        ', 'DIARRHEE DHY M5',\n",
-       "       'MENINGITE      ', 'PFA            ', 'DIARR SANGLANTE',\n",
-       "       'GRIPPE         ', 'PESTE          '], dtype=object)"
+       "array(['DECES MATERNELS', 'FIEVRE TYPHOIDE', 'IRA', 'PALUDISME SUSP',\n",
+       "       'PALUDISME CONF', 'ROUGEOLE', 'PNEUMONIE', 'CHOLERA',\n",
+       "       'DIARRHEE DHY M5', 'MENINGITE', 'PFA', 'DIARR SANGLANTE', 'GRIPPE',\n",
+       "       'PESTE'], dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,12 +549,258 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There are extra spaces in our \"MALADIE\" column that we should get rid of"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ZS</th>\n",
+       "      <th>NUMSEM</th>\n",
+       "      <th>MALADIE</th>\n",
+       "      <th>TOTALCAS</th>\n",
+       "      <th>TOTALDECES</th>\n",
+       "      <th>LETAL</th>\n",
+       "      <th>ATTAQ</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KAMINA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>FIEVRE TYPHOIDE</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KAMINA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>IRA</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>117.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KAMINA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>PALUDISME CONF</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>53.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>KAMINA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>PALUDISME SUSP</td>\n",
+       "      <td>422.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>187.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KAMINA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>FIEVRE TYPHOIDE</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ZS  NUMSEM          MALADIE  TOTALCAS  TOTALDECES  LETAL  \\\n",
+       "0  KAMINA             13.0  FIEVRE TYPHOIDE      80.0         0.0    0.0   \n",
+       "1  KAMINA             13.0  IRA                 265.0         0.0    0.0   \n",
+       "2  KAMINA             13.0  PALUDISME CONF      120.0         1.0    1.0   \n",
+       "3  KAMINA             13.0  PALUDISME SUSP      422.0         0.0    0.0   \n",
+       "4  KAMINA             13.0  FIEVRE TYPHOIDE       2.0         0.0    0.0   \n",
+       "\n",
+       "   ATTAQ  \n",
+       "0   35.5  \n",
+       "1  117.6  \n",
+       "2   53.2  \n",
+       "3  187.2  \n",
+       "4    0.9  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ZS</th>\n",
+       "      <th>NUMSEM</th>\n",
+       "      <th>MALADIE</th>\n",
+       "      <th>TOTALCAS</th>\n",
+       "      <th>TOTALDECES</th>\n",
+       "      <th>LETAL</th>\n",
+       "      <th>ATTAQ</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KAMINA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>FIEVRE TYPHOIDE</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KAMINA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>IRA</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>117.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KAMINA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>PALUDISME CONF</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>53.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>KAMINA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>PALUDISME SUSP</td>\n",
+       "      <td>422.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>187.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KAMINA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>FIEVRE TYPHOIDE</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ZS  NUMSEM          MALADIE  TOTALCAS  TOTALDECES  LETAL  \\\n",
+       "0  KAMINA             13.0  FIEVRE TYPHOIDE      80.0         0.0    0.0   \n",
+       "1  KAMINA             13.0              IRA     265.0         0.0    0.0   \n",
+       "2  KAMINA             13.0   PALUDISME CONF     120.0         1.0    1.0   \n",
+       "3  KAMINA             13.0   PALUDISME SUSP     422.0         0.0    0.0   \n",
+       "4  KAMINA             13.0  FIEVRE TYPHOIDE       2.0         0.0    0.0   \n",
+       "\n",
+       "   ATTAQ  \n",
+       "0   35.5  \n",
+       "1  117.6  \n",
+       "2   53.2  \n",
+       "3  187.2  \n",
+       "4    0.9  "
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Most of the Analysis can be performed if we have specific pivot table:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "ACUTE RESPITATORY INFECTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +809,7 @@
        "<AxesSubplot:xlabel='ZS'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -588,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +841,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -618,7 +862,7 @@
     "ARI2 = ARI2[[\"NUMSEM\",\"TOTALCAS\"]].groupby([\"NUMSEM\"]).sum()\n",
     "\n",
     "#a = list(range(week-20,week +1))\n",
-    "a = list(range(1,week+1))\n",
+    "a = list(np.arange(1,week+1))\n",
     "plt.plot(a,ARI2[\"TOTALCAS\"])\n",
     "plt.title(f\"ARI cases during {int(week)} weeks\")\n",
     "plt.show\n"
@@ -634,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +940,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +960,7 @@
        "<AxesSubplot:xlabel='NUMSEM'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -739,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +992,7 @@
        "<AxesSubplot:xlabel='ZS'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -772,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +1025,7 @@
        "27412"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
